fixed issues with reviews/add/edit overlapping the manga

--- a/app/assets/stylesheets/manga.scss
+++ b/app/assets/stylesheets/manga.scss
@@ -133,7 +133,7 @@
   justify-content: space-between;
   display: flex;
   height: auto;
-  padding-top: 25px;
+  // padding-top: 25px;
   padding-bottom: 10px;
 }
 
